--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -23,5 +23,5 @@ spec:
       port: 9090
       protocol: TCP
       targetPort: 9090
-  type: LoadBalancer  # Alteração para LoadBalancer
+  type: ClusterIP  # Tipo ClusterIP, já que o LoadBalancer será gerenciado pelo Ingress Controller
   sessionAffinity: None
