--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -4,42 +4,17 @@ metadata:
   name: sqctrl-ingress
   namespace: sqfaas
   annotations:
-    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
-    nginx.ingress.kubernetes.io/proxy-body-size: 200m
-    nginx.ingress.kubernetes.io/affinity: cookie
-    nginx.ingress.kubernetes.io/affinity-mode: persistent
-    nginx.ingress.kubernetes.io/session-cookie-samesite: none
-    nginx.ingress.kubernetes.io/session-cookie-conditional-samesite-none: "true"
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-    # nginx.ingress.kubernetes.io/server-snippet:
-    #   if ($http_x_forwarded_proto = http) {
-    #      return 301 https://$host$request_uri;
-    #   }
-  labels:
-    app: sqctrl
+    nginx.ingress.kubernetes.io/rewrite-target: "/"  
+    nginx.ingress.kubernetes.io/ingress.class: nginx-private  
 spec:
-  ingressClassName: nginx
   rules:
-  - host: sqctrl.internal.cluster.local  # Você pode atualizar isso para o seu domínio público ou interno
-    http:
-      paths:
-      - path: /frontend
-        pathType: Prefix
-        backend:
-          service:
-            name: sqctrl-service
-            port:
-              number: 80
- # Regras para HTTPS
-  - host: sqctrl.internal.cluster.local  # Certifique-se de usar o mesmo domínio
-    http:
-      paths:
-      - path: /frontend
-        pathType: Prefix
-        backend:
-          service:
-            name: sqctrl-service
-            port:
-              number: 443
+    - host: sqctrl.sqfaas.dev  
+      http:
+        paths:
+          - path: /frontend  
+            pathType: Prefix  
+            backend:
+              service:
+                name: sqctrl-service
+                port:
+                  name: http  
